--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <div>
 <h1 class="Name" style="margin-bottom:0;">Jon-Paul Barker</h1>
 <p class="Subtitle" style="margin-bottom:0; margin-top:0;">I'm just out here trying to do my best, man</p>
-<button class="Navis" onclick="ShowProf()">Show Professional</button>
-<button class="Navis" onclick="ShowAca()">Show Academic</button>
-<button class="Navis" onclick="ShowPer()">Show Personal</button>
-<button class="Navis" onclick="ShowAll()">Show All</button>
+<button class="Navis" onclick="showProf()">Show Professional</button>
+<button class="Navis" onclick="showAca()">Show Academic</button>
+<button class="Navis" onclick="showPer()">Show Personal</button>
+<button class="Navis" onclick="showAll()">Show All</button>
 </div>
 <h2 class="Section ShowProf">Professional</h2>
 <h3 class="Section ShowAca">Academic</h3>
