--- a/index.html
+++ b/index.html
@@ -8,29 +8,24 @@
 </head>
 <body>
     <header>
-        <div class="wrap">
-            <input type="checkbox" class="toggler">
-            <div class="burger"><div></div></div>
-            <div class="menu">
-                <div>
-                    <div>
-                        <ul>
-                            <li><a onclick="showFill()" href="#">Home</a></li>
-                            <li><a onclick="showProf()" href="#">Professional</a></li>
-                            <li><a onclick="showAcad()" href="#">Academic</a></li>
-                            <li><a onclick="showPers()" href="#">Personal</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+         <div id="menu">
+            <ul>
+                <li><a onclick="showFill()" href="#">Home</a></li>
+                <li><a onclick="showProf()" href="#">Professional</a></li>
+                <li><a onclick="showAcad()" href="#">Academic</a></li>
+                <li><a onclick="showPers()" href="#">Personal</a></li>
+            </ul>
         </div>
         <div id="contact">
             <p>Contact: </p>
             <a href="tel: 00447923111382">Phone</a>
             <a href="mailto: jp.barker@live.co.uk">Email</a>
         </div>
-        <h1>JP &nbsp;<span style="color:black"> Barker</span></h1>
+        <h1>Jon-Paul <span> Barker</span></h1>
     </header>
+    <div id="image">
+        <img src="Dude.png">
+    </div>
     <section id="filler">
         <h3>Welcome</h3>
         <p>I'm a junior web developer based in the UK.</p>
@@ -62,9 +57,8 @@
         <h4>Newcastle Law Centre - Legal Secretary</h4>
         <p>Sept 2010 - Apr 2012</p>
         <ul>
-            <li>One</li>
-            <li>Two</li>
-            <li>Three</li>
+            <li>Assisted ESL clients access legal services and navigate complex terminology.</li>
+            <li>Recorded and reported legal work for the purposes of billing and regulatory monitoring.</li>
         </ul>
     </section>
     <section id="acad">
